--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <input type="text" id="rating" placeholder="Rating" required>
 
 
-    <button type="submit">❤️ Agregar tu película favorita ❤️</button>
+    <button type="submit">❤️ Enviar ❤️</button>
     </form>
     <footer>
   <p>2025 🎬☀️Cine de VERANO☀️🎬 | Valentina Montilla Factoria-F5</p>
